@@ -106,16 +106,9 @@
                     <argLine>
                         -Dnet.bytebuddy.experimental=true
                         -XX:+EnableDynamicAgentLoading
-                        --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
                         --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                         --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                        --add-opens=java.base/java.lang=ALL-UNNAMED
                         --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                        --add-opens=java.base/java.io=ALL-UNNAMED
-                        --add-opens=java.base/java.net=ALL-UNNAMED
-                        --add-opens=java.base/java.nio=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
